k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openfga
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/service: openfga
  template:
    metadata:
      labels:
        app.kubernetes.io/service: openfga
    spec:
      containers:
        - args:
            - run
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command: ["grpc_health_probe", "-addr=0.0.0.0:8081"]
          livenessProbe:
            failureThreshold: 12
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            grpc:
              port: 8081
              
          image: openfga/openfga:latest
          name: openfga
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 3000
      restartPolicy: Always
