k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openfga
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "3003"
      port: 3003
      targetPort: 3000
  selector:
    app.kubernetes.io/service: openfga
